Archive2/7f/2c3c7de2b1873a/output
main.cpp: In function 'int main()':
main.cpp:13:11: error: passing 'const A' as 'this' argument discards qualifiers [-fpermissive]
     a.foo();
           ^
main.cpp:5:10: note:   in call to 'void A::foo()'
     void foo(){ }
          ^
