Archive2/7f/2c3c7de2b1873a/main.cpp
#include <iostream>

struct A
{
    void foo(){ }
};

const A a;
A b;

int main()
{
    a.foo();
    b.foo();
}